--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ I'm always eager to learn, collaborate, and contribute to meaningful tech projec
                         <div class="row align-items-center">
                             <div class="col-md-6">
                                 <div class="exp-col">
-                                    <span>01-Aug-2024 <i>to</i> 30-Feb-2025</span>
+                                    <span>01-Aug-2024 <i>to</i> 28-Feb-2025</span>
                                     <h3>Uniq Technologies</h3>
                                     <h4>Chennai, TamilNadu</h4>
                                     <h5>Java Full Stack Trainee</h5>
@@ -251,7 +251,8 @@ I'm always eager to learn, collaborate, and contribute to meaningful tech projec
                                     <h3>Zidio Solutions</h3>
                                     <h4>Remote</h4>
                                     <h5>Web Developer</h5>
-                                    <p>Lorem ipsum dolor sit amet elit suscipit orci. Donec molestie velit id libero.</p>
+                                    <p>Working with backend services, frontend integration, and database
+logic.</p>
                                 </div>
                             </div>
                         </div>
