--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title>Jim's Portfolio</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Resume Website Template Free Download" name="keywords">
-        <meta content="Resume Website Template Free Download" name="description">
+        <meta name="description" content="Jim Jeffry's personal portfolio showcasing projects, resume, and skills as a Java Full Stack Developer.">
+
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
