--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                                     <h3>UTS Ticket Booking</h3>
                                     <p>Spring Boot, MySQL, JavaScript</p>
                                     <div class="portfolio-links">
-                                        <a href="img/UTS-Mobile-Application-fo.jpg" data-lightbox="portfolio" title="Preview"><i class="fas fa-eye"></i></a>
+                                        <a href="img/Portfolio.jpg" data-lightbox="portfolio" title="Preview"><i class="fas fa-eye"></i></a>
                                         <a href="#"><i class="fas fa-link"></i></a>
                                     </div>
                                 </div>
